# cpptest

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  average-of-levels-in-binary-tree.cpp  coin-change-ii.cpp  faulty-sensor.cpp  main.cpp  minimize-the-maximum-difference-of-pairs.cpp  minimum-genetic-mutation.cpp  split-linked-list-in-parts.cpp
.devcontainer/: Dockerfile  devcontainer.json  shortest-distance-to-a-character.cpp
.github/: copilot-instructions.md
atcoder/: abc179_a.cpp  abc179_b.cpp  abc179_c.cpp  abc180_a.cpp  abc180_b.cpp  abc180_c.cpp  abl_a.cpp  abl_b.cpp  abl_c.cpp  arc106_a.cpp  practice_1.cpp  practice_2_100.cpp  practice_2_200.cpp  practice_2_300.cpp
codeforces/: 1003A.cpp  1005A.cpp  1006A.cpp  1008A.cpp  1009A.cpp  1013A.cpp  1015A.cpp  1016A.cpp  1017A.cpp  1020B.cpp  1025A.cpp  1028A.cpp  1030A.cpp  1031A.cpp  1032A.cpp  1033A.cpp  1038A.cpp  1041A.cpp  1043A.cpp  1047A.cpp  104A.cpp  1051B.cpp  1054A.cpp  1055A.cpp  1057A.cpp  1060A.cpp  1061A.cpp  1064A.cpp  1065A.cpp  1075A.cpp  1077A.cpp  1080A.cpp  1080B.cpp  1081A.cpp  1085A.cpp  1088A.cpp  1089L.cpp  1091A.cpp  1092A.cpp  1092B.cpp  (+1159 more)
guardian/: election-results.cpp
hackerrank/: booking_com_rate-limiting.cpp  cpp-class-template-specialization.cpp  cpp-exception-handling.cpp  hotel-prices.cpp  messages-order.cpp  operator-overloading.cpp  overloading-ostream-operator.cpp
leetcode/: 01-matrix.cpp  1-bit-and-2-bit-characters.cpp  3sum.cpp  (+1311 more)
misc/http_log_parser/: CMakeLists.txt  README.md  alert_test_1.txt  alert_test_2.txt  logmon  logmon.cpp  main.cpp  tester  tester.cpp
(+73 files in other folders)
